--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git branch: 'main', url: 'https://github.com/shadow846/CloudOps.git'
+                git branch: 'master', url: 'https://github.com/shadow846/CloudOps.git'
             }
         }
 
