--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,33 +2,32 @@ pipeline {
     agent any
 
     environment {
-        DOCKER_IMAGE = "goutham0842/cloudops-site"
+        IMAGE_NAME = "goutham0842/cloudops-site"
     }
 
     stages {
         stage('Clone Repository') {
             steps {
-                git branch: 'master', url: 'https://github.com/shadow846/CloudOps.git'
+                git url: 'https://github.com/shadow846/CloudOps.git', branch: 'master'
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                script {
-                    sh 'docker build -t $DOCKER_IMAGE .'
-                }
+                sh 'docker build -t $IMAGE_NAME .'
             }
         }
 
         stage('Push to Docker Hub') {
             steps {
                 withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
-                    script {
-                        sh 'echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin'
-                        sh 'docker push $DOCKER_IMAGE'
-                    }
+                    sh '''
+                        echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                        docker push $IMAGE_NAME
+                    '''
                 }
             }
         }
     }
 }
+
