--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,19 +12,26 @@ pipeline {
   stages {
     stage('Clone repo') {
       steps {
-        git url: 'https://github.com/shadow846/CloudOps.git', branch: 'master'
+        git(
+          url: 'https://github.com/shadow846/CloudOps.git',
+          branch: 'master',
+          credentialsId: 'dockerhub-creds'  // This is the missing part!
+        )
       }
     }
+
     stage('Build Docker Image') {
       steps {
         sh 'docker build -t goutham0842/cloudops-site .'
       }
     }
+
     stage('Push to Docker Hub') {
       steps {
-        withCredentials([usernamePassword(credentialsId: 'dockerhub-creds',
-                                         usernameVariable: 'DOCKER_USER',
-                                         passwordVariable: 'DOCKER_PASS')]) {
+        withCredentials([usernamePassword(
+          credentialsId: 'dockerhub-creds',
+          usernameVariable: 'DOCKER_USER',
+          passwordVariable: 'DOCKER_PASS')]) {
           sh '''
             echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
             docker push goutham0842/cloudops-site
