--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,44 +1,37 @@
 pipeline {
-  agent any
+    agent any
 
-  environment {
-    DOCKERHUB_CREDENTIALS = credentials('dockerhub-creds')
-  }
-
-  stages {
-    stage('Clone repo') {
-      steps {
-        checkout([
-          $class: 'GitSCM',
-          branches: [[name: '*/master']],
-          userRemoteConfigs: [[
-            url: 'https://github.com/shadow846/CloudOps.git',
-            credentialsId: '0b41b991-fd29-42f4-9826-b8e287bd943a'
-          ]]
-        ])
-      }
+    options {
+        skipDefaultCheckout(true) // 🔥 Skip Jenkins' auto git clone
     }
 
-    stage('Build Docker Image') {
-      steps {
-        sh 'docker build -t goutham0842/cloudops-site .'
-      }
+    environment {
+        IMAGE_NAME = 'goutham0842/cloudops-site'
     }
 
-    stage('Push to Docker Hub') {
-      steps {
-        withCredentials([usernamePassword(
-          credentialsId: 'dockerhub-creds',
-          usernameVariable: 'DOCKER_USERNAME',
-          passwordVariable: 'DOCKER_PASSWORD'
-        )]) {
-          sh '''
-            echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-            docker push goutham0842/cloudops-site
-          '''
+    stages {
+        stage('Clone repo') {
+            steps {
+                git credentialsId: '0b41b991-fd29-42f4-9826-b8e287bd943a', url: 'https://github.com/shadow846/CloudOps.git'
+            }
         }
-      }
+
+        stage('Build Docker Image') {
+            steps {
+                sh 'docker build -t $IMAGE_NAME .'
+            }
+        }
+
+        stage('Push to Docker Hub') {
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
+                    sh """
+                        echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+                        docker push $IMAGE_NAME
+                    """
+                }
+            }
+        }
     }
-  }
 }
 
